--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,8 +5,7 @@
 
 /*------------------------------------------------------------others import------------------------------------------------------------*/
 
-// @import './others/shm.scss';
-@import './others/mlider.scss';
+@import './sections/mlider.scss';
 
 /*------------------------------------------------------------sections import------------------------------------------------------------*/
 
