--- a/src/scss/sections/mlider.scss
+++ b/src/scss/sections/mlider.scss
@@ -11,7 +11,7 @@
         position: relative;
         height: 100%;
 
-        // overflow: hidden;
+        overflow: hidden;
     }
 
     .sub-slide-line {
