--- a/src/scss/sections/mlider.scss
+++ b/src/scss/sections/mlider.scss
@@ -191,6 +191,9 @@
     &_10 {
         background: rgb(157, 37, 255);
     }
+    &_11 {
+        background: rgb(132, 209, 44);
+    }
 
     // .slide-mlider__content
     &__content {
